# life-planner-service/src/main/resources/openapi/api-docs.yml
@@ -61,6 +61,58 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
+    put:
+      operationId: updateMainDirections
+      summary: Update main directions
+      tags:
+        - MainDirection
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/MainDirectionDto'
+        required: true
+      responses:
+        '201':
+          description: Main directions were created
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MainDirectionDto'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '401':
+          description: Not authorised
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '404':
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '405':
+          description: Method is not available
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
 
 components:
   schemas:
@@ -80,6 +132,9 @@ components:
     MainDirectionDto:
       type: object
       properties:
+        id:
+          type: string
+          format: uuid
         name:
           type: string
           nullable: false
@@ -94,6 +149,9 @@ components:
     SubdirectionDto:
       type: object
       properties:
+        id:
+          type: string
+          format: uuid
         name:
           type: string
           nullable: false
